validate token
